--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p>Hello world. This is my first website!</p>
-  <p>I am a trackrunner. I want to go to UIUC. I love food. My favorite is Pasta, any type. I also do love Cane's </p>
+  <p>My name is Harmony and I am a senior at Chicago High School for Agricultural Sciences. I am a trackrunner. I want to go to UIUC. I love food. My favorite is Pasta, any type. I also do love Cane's </p>
 </body>
 </html>
